tests/src/frontend/visibility/invalid/global_protected_const.sk
protected const i : Int = 112;
